# hc

./: .gitignore  README.md  arch  hc.cabal  test.c
.stack-work/hoogle/x86_64-linux/lts-12.9/8.4.3/: database.warn
.stack-work/install/x86_64-linux/lts-12.9/8.4.3/doc/: doc-index.html  index.html
.stack-work/install/x86_64-linux/lts-12.9/8.4.3/doc/all/: doc-index-60.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index-Z.html  index.html
.stack-work/install/x86_64-linux/lts-12.9/8.4.3/flag-cache/: alex-3.2.4  fail-4.9.0.0-BAHmj60kS5K7NVhhKpm9J5  hashmap-1.3.3-HBQwhog3n2aA7p7kgy554M  hc-0.1.0.0-1UJwMnV38U2DiABM3hM14n  hc-0.1.0.0-2WovApVUoVT7SLy6gjEhPS  hc-0.1.0.0-2ZrGqM5hiux6ousuIMaoqg  hc-0.1.0.0-62l787F4Vf7ArUIl8TDKLJ  hc-0.1.0.0-8phUK9AGMKnIPPKuJ1bU0D  hc-0.1.0.0-CIbgNLv8mOE24TjFZzvQDF  hc-0.1.0.0-Lm5HzoDFC5dIwM43DE3vOx  intero-0.1.32  language-java-0.2.9-1QPl0MxU9bP8zYd4VADCNA  llvm-hs-6.3.0-EihilmAfbwl4ccGOku0zL1  llvm-hs-pure-6.2.1-zhTFHc1vlfI7HSHCrWKgw
.stack-work/install/x86_64-linux/lts-12.9/8.4.3/pkgdb/: hc-0.1.0.0-IzjI9bZurpaIk0BDO8TvZK.conf  package.cache
app/: Codegen.hs  Main.hs
examples/: a.java  kernel.java
src/Lang/: Codegen.hs  Emit.hs  IRBuilder.hs  JIT.hs  Lexer.hs  Misc.hs  Syntax.hs
(+22 files in other folders)
