name:                hc
version:             1.0.0.0
-- synopsis:
-- description:
homepage:            https://github.com/koerriva/hc#readme
license:             BSD3
license-file:        LICENSE
author:              koerriva
maintainer:          rivakoer@gmail.com
copyright:           CopyRight Koerriva 2018
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lang.Codegen
                     , Lang.Emit
                     , Lang.Misc
                     , Lang.JIT
  build-depends:       base >= 4.7 && < 5
                     , llvm-hs-pure
                     , llvm-hs
                     , containers
                     , mtl
                     , language-java
                     , bytestring
  default-language:    Haskell2010

executable hc
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hc
                     , language-java
                     , bytestring
  default-language:    Haskell2010

test-suite hc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hc
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/koerriva/hc
